update docs and config mistakes

--- a/galaxy/desyncit/beaker/roles/beaker/templates/config.j2
+++ b/galaxy/desyncit/beaker/roles/beaker/templates/config.j2
@@ -1,4 +1,4 @@
-HUB_URL={{ beaker_hub }}
+HUB_URL={{ beaker_client_hub }}
 AUTH_METHOD = {{ beaker_auth_method }} 
 {% if beaker_auth_method == "krbv" %}
 KRB_REALM = "{{ beaker_kerberos_realm }}"
