2ish-WORKS deployed with full repo and partial repo up and working

--- a/container-builds/gopxe/nodes/ansible/roles/ibmmq/templates/qm-cluster.mqsc.j2
+++ b/container-builds/gopxe/nodes/ansible/roles/ibmmq/templates/qm-cluster.mqsc.j2
@@ -38,6 +38,8 @@ DEFINE CHANNEL(TO.{{ member.peer | upper }}) +
        TRPTYPE(TCP) +
        REPLACE
 
+START  CHANNEL(TO.{{ member.peer | upper }})
+
 ALTER  QMGR CHLAUTH(DISABLED)
 ALTER  QMGR CONNAUTH(' ')
 REFRESH SECURITY TYPE(CONNAUTH)
